# creddie

./: .gitignore  README.md  compose.yaml  example.env  run.sh  stop.sh  validate_args.sh
server/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml  start.sh
server/backend/: Dockerfile  README.md  alembic.ini  prestart.sh  pyproject.toml  run_tests.sh  start.sh
server/backend/alembic/: env.py  script.py.mako
server/backend/alembic/versions/: 1256d0839b58_created_category_table_txn_refs_.py  ae297ff7a838_transaction_table_creation.py  ca0b5484b1ea_revision_for_temporary_table_only_used_.py  da8e8aa1daa6_dummy_revision_for_table_that_should_be_.py
server/backend/creddie/: config.py  consts.py  main.py
server/backend/creddie/api/: deps.py
server/backend/creddie/api/v1/: router.py
server/backend/creddie/api/v1/endpoints/: categories.py  form.py  transactions.py
server/backend/creddie/crud/: __init__.py  base.py  category_crud.py  transaction_model.py
server/backend/creddie/db/: db_prestart.py  initial_data.py  session.py
server/backend/creddie/models/: __init__.py  category_model.py  example_model.py  transaction_model.py
server/backend/creddie/schemas/: category_schema.py  metaclass.py  transaction_schema.py  types.py
server/backend/creddie/templates/: form.html  index.html
server/backend/creddie/utils/: tools.py
server/backend/tests/: README.md  conftest.py
server/backend/tests/api/: test_app_root.py
server/backend/tests/crud/: test_category_crud.py  test_transaction_crud.py
server/backend/tests/schemas/: test_types.py
server/backend/tests/utils/: __init__.py  models.py  utils.py
server/creddie/: config.py  consts.py  main.py  prestart.py
server/creddie/schemas/: transaction_schema.py  types.py
server/creddie/templates/: form.html
server/frontend/: Dockerfile  README.md  pyproject.toml  start.sh
server/frontend/creddie_front/: main.py  routes.py
server/frontend/creddie_front/templates/: form.html
