[tool.poetry]
name = "creddie"
version = "0.1.0"
description = "Webserver for Creddie App"
authors = ["Eli Grubbs <gitcontribs@eligrubbs.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "creddie"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
