[tool.poetry]
name = "creddie"
version = "0.1.0"
description = "Webserver for Creddie App"
authors = ["Eli Grubbs <gitcontribs@eligrubbs.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "creddie"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.3"}
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
tenacity = "^9.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
